@@ -976,9 +976,15 @@ TkMacOSXDrawControl(
         Tk_Font    font;
         int        len;
         
-        len = TkFontGetFirstTextLayout(butPtr->textLayout, 
-                &font, controlTitle);
-        controlTitle[len] = 0;
+	if ((mbPtr->info.image == NULL) && (mbPtr->info.bitmap == None) 
+	  || (mbPtr->info.compound != COMPOUND_NONE)) {
+	    len = TkFontGetFirstTextLayout(butPtr->textLayout, 
+					   &font, controlTitle);
+	    controlTitle[len] = 0;
+	} else {
+	    len = 0;
+	    controlTitle[0] = 0;
+	}
         if (bcmp(mbPtr->controlTitle, controlTitle, len+1)) {
             CFStringRef cf;    	    
             cf = CFStringCreateWithCString(NULL,
